--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,6 @@ nav a {
     text-decoration: none;
     font-size: 20px;
     font-family: "Bebas Neue", serif;
-    text-decoration: none;
     color: #000000;
     text-align: center;
     font-weight: 600;
@@ -200,7 +199,31 @@ footer img {
 }
 
 @media screen and (min-width:768px){
-    html {
+    .menu {
+        display: none;
+    }
+    nav {
         background-color: red;
+        height: 220px;
+    }
+    nav .avatar{
+        position: absolute;
+        left: 13px;
+        top: 0px;
+    }
+    nav .sign {
+        position: absolute;
+        right: 50px;
+        top: 12px;
+    }
+    .search {
+        position:relative; 
+        bottom: 250px;
+        left: 170px;
+    }
+}
+@media screen and (min-width:1280px){ 
+    html {
+        background-color: blue;
     }
 }
