--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,9 @@ input {
     font-family: "Montserrat", serif;
 }
 nav {
+    position: relative;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
-    align-items: center;
-    text-align: center;
     margin-left: -10px;
     margin-right: -10px;
     margin-top: -20px;
@@ -54,18 +53,18 @@ nav a {
     font-weight: 600;
     }
 .avatar {
-    display: flex;
+    display: f;
+    position: relative;
     background-color: #EB5428;
     width: 200px;
-    margin-left: 25px;
-    margin-right: 25px;
-    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
     justify-content: center;
     align-items: center;
     height: 99px;
 }
-.sign {
-    align-items: center;
+.main-nav {
+    display: none;
 }
 .search {
     display: flex;
@@ -103,6 +102,10 @@ nav a {
     color: #EB5428;
     text-align: center;
     font-weight: 600;
+    
+}
+.caption {
+    margin-top: -50px;
 }
 article a {
     margin-top: 80px;
@@ -202,23 +205,36 @@ footer img {
     .menu {
         display: none;
     }
+    .main-nav img {
+        display: grid;
+        position: relative;
+        grid-template-columns: repeat(7, 1fr);
+        width: 73px;
+    }
+    .main-nav a {
+        display: grid;
+        position: relative;
+        top: 100px;
+        margin-right: 55px;
+        color: #EB5428;
+    }
     nav {
-        background-color: red;
-        height: 220px;
+        height: 250px;
     }
     nav .avatar{
         position: absolute;
         left: 13px;
         top: 0px;
+        width: 90px;
     }
     nav .sign {
         position: absolute;
-        right: 50px;
+        right: 65px;
         top: 12px;
     }
     .search {
         position:relative; 
-        bottom: 250px;
+        bottom: 270px;
         left: 170px;
     }
 }
