--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ p {
     font-size: 16px;
     font-family: "Montserrat", serif;
 }
-section {
+.dishes {
     background-color: #7ABFBF;
 }
 section figure {
@@ -264,6 +264,10 @@ footer img {
         left: 60px;
         top: 250px;
     }
+    .prep {
+        justify-content: center;
+    }
+
 }
 @media screen and (min-width:1280px){ 
     html {
